Updated StopSelector to pre-select the targets of a single Stop cue being updated. Corrected the placement of new cues in the list when none of the existing cues are selected.